objects/WorkType.object
<CustomObject>
    <fields>
        <fullName>Checkbox_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Self_Service_Work_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to indicate that this Work Type will also be visible to a customer who is self scheduling.</description>
        <inlineHelpText>Check this box to indicate that this Work Type will also be visible to a customer who is self scheduling.</inlineHelpText>
        <label>Self Service Work Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field Service Lightning (FSL)</fullName>
                    <label>Salesforce Field Service(SFS)</label>
                </value>
                <value>
                    <fullName>Lightning Scheduler (LS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>